# SmartHome

./: README.md
Host/Drivers/BSP/24CXX/: 24cxx.c
Host/Middlewares/LVGL/GUI_APP/mydemo/: CMakeLists.txt  filelist.txt  ui.c  ui.h
Host/Middlewares/LVGL/GUI_APP/mydemo/11/: ui.c
Host/Middlewares/LVGL/GUI_APP/mydemo/fonts/: ui_font_Font1.c  ui_font_Font2.c  ui_font_Font3.c  ui_font_jiajian.c
Host/Middlewares/LVGL/GUI_APP/mydemo/images/: ui_img_1light_png.c  ui_img_airquality_png.c  ui_img_alight_png.c  ui_img_curtain_png.c  ui_img_group_39_png.c  ui_img_group_64_png.c  ui_img_kongtiao_png.c  ui_img_light_png.c  ui_img_nowlight_png.c  ui_img_rectangle_71_png.c  ui_img_router_png.c  ui_img_temperature_png.c  ui_img_vector_png.c  ui_img_water_png.c
Host/Middlewares/LVGL/GUI_APP/mydemo/screens/: ui_AirQuality.c  ui_DengGuang.c  ui_kongtiao.c  ui_main.c
Host/Projects/: README.txt
Host/Projects/VScode/: SmartHome.uvprojx
Host/User/: FreeRTOSConfig.h  lvgl_demo.c  lvgl_demo.h  main.c
Slave/: README.txt  Slave.uvguix.20416  Slave.uvoptx  Slave.uvprojx
Slave/.eide/: eide.json
Slave/FreeRTOS/include/: FreeRTOSConfig.h
Slave/GUI/: GUI.c  GUI.h  GUI_ImageData.c  GUI_ImageData.h
Slave/Hardware/Beep/: Beep.c  Beep.h
Slave/Hardware/DTH22/: DHT22.c  DHT22.h
Slave/Hardware/LED/: LED.c  LED.h
Slave/Hardware/MQ_Series/: MQ_Series.c  MQ_Series.h
Slave/Hardware/OLED_v2.0/: OLED.c  OLED.h  OLED_Data.c  OLED_Data.h
Slave/Hardware/REMOTE/: remote.c  remote.h
Slave/system/Delay/: Delay.c  Delay.h
Slave/system/usart/: usart.c
Slave/user/: main.c  stm32f4xx_it.c
(+26 files in other folders)
